# EnglishFormatter

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Readme.md  vcpkg.json
.github/: ci.yml
.github/workflows/: main.yml
cli_app/: api_client.cpp  api_client.hpp  cli.cpp  cli_app.sln  cli_app.vcxproj  cli_app.vcxproj.filters  common.cpp  common.hpp  display.cpp  display.hpp  eng_format.cpp  eng_format.hpp  namespace.txt  resource.h
cli_app/curl/: libcurl_a.lib
cli_app/include/: api_client.hpp  common.hpp  display.hpp  eng_format.hpp
cli_app/lib/: libcurl_a.lib
cli_app/src/: api_client.cpp  common.cpp  display.cpp  eng_format.cpp
cli_app/tests/: tests.cpp
examples/: assassins.txt  assassins.txt_modified  opensource.txt  opensource.txt_modified
